@@ -5,6 +5,8 @@ TODO
 ** fix missing VERSION
 ** remove ASSORTED_DLL_IMPORT from msvscpp files
 ** fix autogen.ps1
+* banalyze
+** add offset and size CLI options
 
 * create xor tool that will byte-wise xor a file using a "key"
 * create equivalent of sigfind that is more powerful
